# OptiXDemo

./: .gitignore  CMakeLists.txt
src/: main.cpp  optix_app.cpp  optix_app.h
